<resources>
    <string name="app_name">Event Melon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mock_event_description">We are excited to bring you the second session of our Android Study Jam. We will cover the following topics in Kotlin during the session…</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Et netus et malesuada fames ac turpis. Nibh sed pulvinar proin gravida hendrerit. Euismod lacinia at quis risus sed vulputate odio. Leo integer malesuada nunc vel risus. Rhoncus urna neque viverra justo nec ultrices dui sapien. Egestas maecenas pharetra convallis posuere morbi leo urna molestie at. At imperdiet dui accumsan sit amet nulla facilisi. Varius quam quisque id diam vel quam elementum. Ipsum a arcu cursus vitae congue mauris rhoncus. Nulla aliquet enim tortor at auctor urna nunc. Urna neque viverra justo nec ultrices. Quis auctor elit sed vulputate mi. Viverra vitae congue eu consequat ac felis donec et. Arcu cursus vitae congue mauris rhoncus aenean vel.

Urna neque viverra justo nec ultrices dui sapien eget. Egestas sed tempus urna et pharetra pharetra massa massa ultricies. Cras adipiscing enim eu turpis egestas pretium aenean. Risus pretium quam vulputate dignissim suspendisse in. Risus sed vulputate odio ut enim blandit volutpat. Vitae suscipit tellus mauris a diam maecenas sed enim ut. In nisl nisi scelerisque eu ultrices vitae auctor. Id venenatis a condimentum vitae sapien pellentesque habitant. Natoque penatibus et magnis dis parturient. Nullam vehicula ipsum a arcu. Non nisi est sit amet facilisis magna. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. Porttitor leo a diam sollicitudin tempor id eu nisl nunc. Euismod lacinia at quis risus sed vulputate odio ut enim. Id diam maecenas ultricies mi eget.</string>
    <string name="android_study_jam">Android Study Jam</string>
    <string name="eventbutton">GOTO EVENT</string>
    <string name="greeting_1_home_string">Hi</string>
    <string name="greeting_2_home_string">Amalu Amalu</string>
    <string name="thisweek_1_home_string">You\'ve got</string>
    <string name="thisweek_2_home_string">7</string>
    <string name="thisweek_3_home_string">new events this week.</string>
    <string name="event_poster">event poster</string>
    <string name="recommended_events">Recommended Events</string>
    <string name="view_more">View More</string>
    <string name="going">going</string>
</resources>