<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="51dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_main"
        android:paddingBottom="16dp"
        tools:context=".home.HomeFragment">

        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/greeting_1_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/greeting_1_home_string"
            android:textColor="@color/black_main"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/greeting_2_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/greeting_2_home_string"
            android:textColor="@color/black_main"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greeting_1_home" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/thisweekgrp_home"
            android:layout_width="362dp"
            android:layout_height="26dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greeting_2_home">

            <TextView
                android:id="@+id/thisweek_1_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/thisweek_1_home_string"
                android:textColor="@color/black_main"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6" />

            <TextView
                android:id="@+id/thisweek_2_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_notifsquare"
                android:fontFamily="@font/proxima_nova_regular"
                android:gravity="center"
                android:text="@string/thisweek_2_home_string"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/thisweek_1_home"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/thisweek_3_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/thisweek_3_home_string"
                android:textColor="@color/black_main"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/thisweek_2_home"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/thisweekrecview_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"

            app:layoutManager="LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thisweekgrp_home" >

        </androidx.recyclerview.widget.RecyclerView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recomended_grp_home"
            android:layout_width="362dp"
            android:layout_height="26dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thisweekrecview_home">

            <TextView
                android:id="@+id/recomended_1_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/recommended_events"
                android:textColor="@color/black_main"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6" />


            <TextView
                android:id="@+id/recomended_2_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/view_more"
                android:textColor="@color/teal_500"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommendedrecview_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"

            app:layoutManager="LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recomended_grp_home">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>